{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 361,
  "lineage": "5b93694b-26dc-7d89-d6b2-553c2cb6774c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca8cb945b96ed495",
            "domain": "vpc",
            "id": "eipalloc-0ca8cb945b96ed495",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-204-236-224-123.compute-1.amazonaws.com",
            "public_ip": "204.236.224.123",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:902308669087:instance/i-0fcf049e0c46e3657",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fcf049e0c46e3657",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080bbbbee904dda04",
            "private_dns": "ip-10-19-1-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.19.1.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a54b99e18df92be1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e68cf32203c7f076",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ee2e62c781a0e196"
            ]
          },
          "dependencies": [
            "aws_key_pair.arm_ec2_access_key",
            "aws_security_group.arm_security_group_db",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ubuntu_22_04_lts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a7d80731ae1b2435",
            "arn": "arn:aws:ec2:us-east-1:902308669087:instance/i-007c837adf745c809",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007c837adf745c809",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9d51a2504a3c266",
            "private_dns": "ip-10-19-2-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.19.2.57",
            "public_dns": "ec2-3-84-237-134.compute-1.amazonaws.com",
            "public_ip": "3.84.237.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02831dae741009938",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-008c2e772a39f3a82",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080dbb06be64f8291"
            ]
          },
          "dependencies": [
            "aws_key_pair.arm_ec2_access_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ubuntu_22_04_lts"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:internet-gateway/igw-0f68f571c798870ce",
            "id": "igw-0f68f571c798870ce",
            "owner_id": "902308669087",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "arm_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca8cb945b96ed495",
            "association_id": "eipassoc-0f723e8c6ff83f47a",
            "connectivity_type": "public",
            "id": "nat-0103cc08e9d471126",
            "network_interface_id": "eni-0dd144549c0f8d932",
            "private_ip": "10.19.2.251",
            "public_ip": "204.236.224.123",
            "subnet_id": "subnet-008c2e772a39f3a82",
            "tags_all": {
              "Project": "ARMProjekt"
            }
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-0f068a2e07c74ba13",
            "id": "rtb-0f068a2e07c74ba13",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0103cc08e9d471126",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:route-table/rtb-0c7a2a5d9c8d6d162",
            "id": "rtb-0c7a2a5d9c8d6d162",
            "owner_id": "902308669087",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f68f571c798870ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddcba67b477c5583",
            "route_table_id": "rtb-0f068a2e07c74ba13",
            "subnet_id": "subnet-0e68cf32203c7f076"
          },
          "dependencies": [
            "aws_eip.arm_eip",
            "aws_internet_gateway.arm_igw",
            "aws_nat_gateway.arm_nat_gateway",
            "aws_route_table.arm_private_rt",
            "aws_subnet.arm_subnet_private",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06738fffbfb71c6f4",
            "route_table_id": "rtb-0c7a2a5d9c8d6d162",
            "subnet_id": "subnet-008c2e772a39f3a82"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:security-group/sg-080dbb06be64f8291",
            "description": "Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080dbb06be64f8291",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "902308669087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:security-group/sg-0ee2e62c781a0e196",
            "description": "Security group for DB",
            "egress": [
              {
                "cidr_blocks": [
                  "10.19.0.0/16"
                ],
                "description": "Allow all outbound traffic to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee2e62c781a0e196",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.19.2.0/24"
                ],
                "description": "Allow DB acces from server",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "arm_security_group_db",
            "name_prefix": "",
            "owner_id": "902308669087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-0e68cf32203c7f076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e68cf32203c7f076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:subnet/subnet-008c2e772a39f3a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c2e772a39f3a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902308669087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Project": "ARMProjekt"
            },
            "vpc_id": "vpc-0e0030aca5b57f40c"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:902308669087:vpc/vpc-0e0030aca5b57f40c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.19.0.0/16",
            "default_network_acl_id": "acl-0f6e39c589142cd54",
            "default_route_table_id": "rtb-013f6e1cf02ea418a",
            "default_security_group_id": "sg-0cf22fafe8aa7b738",
            "dhcp_options_id": "dopt-01afa91bb7abea722",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0030aca5b57f40c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013f6e1cf02ea418a",
            "owner_id": "902308669087",
            "tags_all": {
              "Project": "ARMProjekt"
            }
          }
        }
      ]
    }
  ]
}